# wallpaper-effects-generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  mkdocs.yml  phase1-complete.txt  phase2-complete.txt  pyproject.toml  settings.toml
.archive/: GENERIC_ARCHITECTURE.md
.archive/core/: pyproject.toml
.archive/core/config/: settings.toml
.archive/core/docs/: README.md
.archive/core/docs/api/: README.md
.archive/core/docs/api/cli/: README.md
.archive/core/docs/api/python/: README.md
.archive/core/docs/architecture/: README.md  data-flow.md  overview.md
.archive/core/docs/configuration/: README.md  effects-yaml.md  settings.md
.archive/core/docs/development/: README.md  code-style.md  contributing.md  setup.md  testing.md
.archive/core/docs/errors/: README.md  incident-log.md
.archive/core/docs/examples/: README.md  advanced.md  basic.md
.archive/core/docs/getting-started/: README.md  installation.md  prerequisites.md  quick-start.md
.archive/core/docs/guides/: README.md  batch-processing.md  extending-effects.md  usage.md
.archive/core/docs/troubleshooting/: README.md  common-issues.md  error-reference.md
.archive/core/effects/: effects.yaml
.archive/core/src/wallpaper_processor/cli/: __init__.py  batch.py  main.py  process.py  show.py
.archive/core/src/wallpaper_processor/config/: __init__.py  loader.py  schema.py  settings.py
.archive/core/src/wallpaper_processor/console/: __init__.py  output.py  progress.py
.archive/core/src/wallpaper_processor/engine/: __init__.py  batch.py  chain.py  executor.py
.archive/core/tests/: conftest.py  test_cli.py  test_config_loader.py  test_config_schema.py  test_config_settings.py  test_console.py  test_engine_batch.py  test_engine_chain.py  test_engine_executor.py
.archive/docs/: README-old.md  STATUS.md
.archive/docs/plans/: 2026-02-02-phase2-core-migration.md  2026-02-04-phase4-implementation.md
.archive/orchestrator/: pyproject.toml
.archive/orchestrator/docker/: Dockerfile.imagemagick  Dockerfile.pil
.archive/orchestrator/docs/: README.md
.archive/orchestrator/tests/: __init__.py  test_config.py  test_passthrough.py  test_show.py
.archive/refactor/: 01_feature_request.md  02_architecture.md  03_technical_specification.md  04_implementation_plan.md  05_ai_implementation_guide.md
.github/: pull_request_template.md
.github/workflows/: ci-core.yml  ci-effects.yml  ci-orchestrator.yml  ci-settings.yml  smoke-test.yml
core/: Makefile
core/docs/: README.md
core/docs/architecture/: data-flow.md
core/docs/configuration/: README.md  effects-yaml.md  settings.md
core/docs/development/: README.md  contributing.md  testing.md
core/docs/getting-started/: prerequisites.md
core/docs/guides/: extending-effects.md
core/docs/troubleshooting/: README.md  common-issues.md  error-reference.md
core/src/wallpaper_processor/: __init__.py
core/tests/: __init__.py  conftest.py  test_config_loader.py  test_console.py  test_engine_chain.py
docs/: MIGRATION.md  README.md  SMOKE_TESTS_CHANGES_SUMMARY.md  SMOKE_TESTS_MIGRATION_GUIDE.md  STATUS.md  index.md  investigation-findings.md  investigation-parameter-types-bug.md
docs/explanation/: architecture.md  contributing.md  host-vs-container.md  layered-config.md
docs/how-to/: apply-composite.md  apply-preset.md  apply-single-effect.md  batch-process.md  dry-run.md  install-container.md  override-config.md  run-in-container.md
docs/investigation/: 00_REQUIREMENTS.md  00_RULES.md  01_STATE.md  02_SYNTHESIS_STATE.md  03_DOC_PLAN.md  03_INVENTORY.md  04_CONFORMANCE.md  04_TOPIC_MAP.md  05_TEST_SPEC.md  05_TEST_SPEC_core_orchestrator.md  05_TEST_SPEC_settings_effects.md  06_DOC_CLAIMS.md  07_TRACEABILITY.md  08_FINDINGS.md  09_UNKNOWNS.md  10_METRICS.md  11_NEXT_ACTIONS.md
docs/plans/: 2026-01-31-monorepo-refactor-design.md  2026-01-31-phase1-implementation.md  2026-01-31-phase1-layered-settings.md  2026-02-03-phase3-orchestrator.md  2026-02-04-layered-effects-design.md  2026-02-04-phase4-container-execution.md  2026-02-05-phase2-layered-effects-integration-implementation.md  2026-02-05-phase2-layered-effects-integration.md  2026-02-06-dry-run-design.md  2026-02-06-dry-run-implementation.md  2026-02-06-test-script-verbosity-upgrade.md  2026-02-13-optional-output-directory-design.md  2026-02-13-optional-output-directory.md  2026-02-24-investigation-driven-diataxis-docs-design.md  2026-02-24-investigation-driven-diataxis-docs.md  2026-02-24-investigation-driven-mkdocs-docs.md  2026-02-25-investigation-driven-diataxis-docs-design.md  2026-02-25-investigation-driven-diataxis-docs.md  2026-03-06-fully-containerize-orchestrator-design.md  2026-03-06-fully-containerize-orchestrator.md
docs/reference/: cli-core.md  cli-orchestrator.md  config.md  effects.md
docs/tutorials/: getting-started.md
orchestrator/: pyproject.toml
orchestrator/docker/: Dockerfile.imagemagick  Dockerfile.pil
orchestrator/docs/: README.md
orchestrator/docs/api/: README.md
orchestrator/docs/api/cli/: README.md
orchestrator/docs/architecture/: README.md  data-flow.md  overview.md
orchestrator/docs/configuration/: settings.md
orchestrator/docs/development/: contributing.md  setup.md  testing.md
orchestrator/docs/examples/: advanced.md  basic.md
orchestrator/docs/getting-started/: installation.md  prerequisites.md  quick-start.md
orchestrator/docs/guides/: README.md  usage.md
orchestrator/docs/troubleshooting/: README.md  common-issues.md
orchestrator/src/wallpaper_effects/: cli.py
orchestrator/src/wallpaper_effects/commands/: __init__.py  install.py
orchestrator/src/wallpaper_effects/config/: __init__.py  config.py  constants.py
orchestrator/src/wallpaper_effects/services/: __init__.py
orchestrator/src/wallpaper_effects/utils/: __init__.py  passthrough.py  runtime.py
orchestrator/tests/: __init__.py  test_config.py  test_show.py
tests/smoke/: README.md  run-smoke-tests.sh
tools/dev/: test-all-commands.sh  test-all-commands.sh.backup
tools/smoke-tests/: README.md  run.sh
(+64 files in other folders)
