[project]
name = "wallpaper-effects-generator"
version = "0.1.0"
description = "Wallpaper effects generator with layered configuration"
requires-python = ">=3.12"
dependencies = [
    "layered-settings",
    "wallpaper-core",
    "wallpaper-orchestrator",
    "layered-effects",
]

[tool.uv.workspace]
members = [
    "packages/settings",
    "packages/effects",
    "packages/core",
    "packages/orchestrator",
]

[tool.uv.sources]
layered-settings = { workspace = true }
wallpaper-core = { workspace = true }
wallpaper-orchestrator = { workspace = true }
layered-effects = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.19.0",
    "black>=26.0.0",
    "ruff>=0.14.0",
    "isort>=7.0.0",
    "bandit>=1.8.0",
    "pre-commit>=3.8.0",
]
